<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnergyHarvest</string>
    <string name="action_settings">Settings</string>
    <string name="answerA">answerA</string>
    <string name="answerB">answerB</string>
    <string name="answerC">answerC</string>
    <string name="answerD">answerD</string>
    <string name="question">How is that possible?</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Passwort</string>
    <string name="hint_username">Benutzername</string>
    <string name="hello_tutorial">Hello Tutorial!</string>
    <string name="main_menu">Main Menu</string>
    <string name="button_confirm">Bestätigen</string>
    <string name="username_not_found">Username does not exist!</string>
    <string name="password_incorrect">The password is not correct!</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_clan">ClanActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_registry">RegistryActivity</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_fight">FightActivity</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="button_register">Registrieren</string>
    <string name="button_login">Anmelden</string>
    <string name="description_logo_main">Energy Harvest Logo</string>
    <string name="button_map">Karte</string>
    <string name="button_clan">Clan</string>
    <string name="button_profile">Profil</string>
    <string name="button_tutorial">Tutorial</string>
    <string name="placeholder_quiz">[Quiz]</string>
    <string name="button_challenge">Herrausfordern</string>
    <string name="title_login">Anmelden</string>
	<string name="title_registry">Registrierung</string>
    <string name="description_logo_clan">Clan Logo Placeholder</string>
    <string name="textview_clan">Clan:</string>
    <string name="textview_captures">Eroberungen:</string>
    <string name="textview_points">Punkte:</string>
    <string name="button_add">Hinzufügen</string>
    <string name="button_resign">Austreten</string>
    <string name="button_join">Beitreten</string>
    <string name="button_create">Gründen</string>
    <string name="title_profile">Profil</string>
    <string name="textview_name">Name:</string>
    <string name="textview_email">E-mail:</string>
    <string name="textview_id">ID:</string>
    <string name="button_edit">Edit</string>
    <string name="title_activity_creation">CreationActivity</string>
    <string name="title_activity_invitation">InvitationActivity</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="button_invitation">Invitation</string>
    <string name="button_invite">Einladen</string>
    <string name="lobbyStartSpec">Wait for Host</string>
    <string name="dialog_invitation">Einladung akzeptieren?</string>
    <string name="button_decline">Ablehnen</string>
    <string name="button_startquiz">Start the quiz!</string>

</resources>
