<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuizLogic" >

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/answerA"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/answerD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question"
        android:layout_alignParentBottom="true"
        android:text="@string/answerD" />

    <Button
        android:id="@+id/answerC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answerD"
        android:layout_alignLeft="@+id/question"
        android:text="@string/answerC" />

    <Button
        android:id="@+id/answerB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answerC"
        android:layout_alignLeft="@+id/question"
        android:text="@string/answerB" />

    <Button
        android:id="@+id/answerA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answerB"
        android:layout_alignLeft="@+id/question"
        android:text="@string/answerA" />

</RelativeLayout>