<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="1"
    android:background="@drawable/menu_background" >

    <ImageView
        android:id="@+id/registry_logo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:contentDescription="@string/description_logo_main"
        android:src="@drawable/logo" />
    
    <TextView
        android:id="@+id/title_registry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#81c0df"
        android:textSize="32sp" />
    
    <EditText
        android:id="@+id/login_edit_text_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
		android:background="@drawable/edittext_style" />
    
   <requestFocus />
   
   <EditText
        android:id="@+id/login_edit_text_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_style" >
        
    </EditText>
   
   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
        >
       <Button
	        android:id="@+id/login_button_registry"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_margin="1dp"
	        android:onClick="goToRegistry"
	        android:text="@string/button_register"
	        android:background="@drawable/button_style"
	        style="@style/button_text" />

	    <Button
	        android:id="@+id/login_button_login"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_margin="1dp"
	        android:onClick="login"
	        android:text="@string/button_login" 
	        android:background="@drawable/button_style"
	        style="@style/button_text" />
   </LinearLayout>
	   

</LinearLayout>