<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background" >

    <ImageView
        android:id="@+id/creation_logo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/description_logo_clan"
        android:src="@drawable/clan_logo_default" />

    <EditText
        android:id="@+id/creation_edit_text_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creation_logo"        
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="@android:color/transparent"
        android:inputType="text"
        android:ems="10" >        
    </EditText>

    <GridView 
	    android:id="@+id/creation_gridview"
	    android:layout_width="match_parent"
	    android:layout_height="300dp"
	    android:gravity="center"
	    android:layout_below="@+id/creation_edit_text_name"
	    android:stretchMode="columnWidth"
	    android:numColumns="auto_fit"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	/>

    <Button
        android:id="@+id/creation_button_create"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creation_gridview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="createClan"
        android:text="@string/button_confirm"
        android:background="@drawable/button_style"
        style="@style/button_text" />

    <Button
        android:id="@+id/invitation_button_invite"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/creation_edit_text_name"
        android:layout_alignBottom="@+id/creation_edit_text_name"
        android:layout_toRightOf="@+id/creation_button_create"
        android:background="@drawable/button_style"
        android:onClick="editClanName"
        android:text="@string/button_edit" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/creation_edit_text_name"
        android:layout_alignBottom="@+id/creation_edit_text_name"
        android:layout_toLeftOf="@+id/creation_logo"
        android:text="@string/textview_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
